# ascii-hangman

./: .clang-format  .gitignore  CMakeLists.txt  README.md  game.cpp  game.h  hangman.cpp  hangman.h  menu.cpp  sprites.cpp
include/: game.h  hangman.h  menu.h  sprites.h
res/: wordlist-de  wordlist-en
src/: game.c  game.h  hangman.c  hangman.h  main.c  menu.c  menu.h  sprites.c  sprites.h
